<resources>

    <!-- Genéricos -->

    <string name="app_name">IB-Internal</string>
    <string name="total">Total</string>
    <string name="diference">Diferencia</string>
    <string name="generic_error">Lo sentimos, ha ocurrido un error.</string>
    <string name="alls_masc">Todos</string>
    <string name="alls">Todas</string>
    <string name="generic_cancel">Cancelar</string>
    <string name="generic_save">Guardar</string>
    <string name="generic_text_date">Fecha</string>
    <string name="generic_text_description">Descripción</string>


    <!-- DialogManagerUtils -->

    <string name="btn_close">Cerrar</string>
    <string name="error_title">¡Vaya!</string>
    <string name="error_body">Parece que hay problemas de conexión</string>
    <string name="error_footer">¿Volvemos a probar?</string>


    <!-- DicesActivity -->

    <string name="text_dices">Tira el dado</string>
    <string name="text_or">o</string>
    <string name="button_arbitrary">Numero aleatorio</string>
    <string name="roll_description">Roll the dice, bro.</string>
    <string name="text_random_number">0</string>
    <string name="text_pick_random"> O elige tu propio rango</string>


    <!-- ExpensesActivity -->

    <string name="text_expense_name">Nombre del Gasto</string>
    <string name="text_category">Categoría</string>
    <string name="text_expense_amount">Cantidad</string>
    <string name="dialog_category_chooser">Selecciona la categoría de filtro</string>
    <string name="expenses_selectedcategory">Categoría seleccionada: </string>
    <string name="expenses_add_expense">AÑADIR GASTO</string>
    <string name="expenses_add_to_pot">AÑADIR AL BOTE</string>
    <string name="expenses_email_text">Email</string>
    <string name="expenses_export">Exportar</string>
    <string name="expenses_potvalue">Valor del bote:</string>
    <string name="expenses_export_bbdd">Exportar</string>
    <string name="expenses_import_bbdd">Importar BBDD</string>
    <string name="expenses_filter">Filtro</string>

    <string name="expensescategory_common">Gastos comunes</string>
    <string name="expensescategory_fooddrink">Gastos de alimentación</string>
    <string name="expensescategory_education">Gastos de educación</string>
    <string name="expensescategory_other">Otros gastos</string>
    <string name="expensescategory_extra">Gastos extra/No planeados</string>



    <!-- RecordsActivity -->

    <string name="newrecord_tab_meeting">Reunión</string>
    <string name="newrecord_tab_review">Review</string>
    <string name="newrecord_tab_record">Memoria</string>


    <!-- ???????? -->

    <string name="GPSAlertDialogTitle">WHAT??</string>
    <string name="GPSAlertDialogMessage">WHAT??</string>
    <string name="action_settings">what???</string>
    <string name="label_cancel">what????</string>

    <!-- Vote -->
    <string name="vote_votingtopic">Tema de la votación</string>
    <string name="vote_buttonvotes">Votaciones</string>
    <string name="vote_textview_answersnumber">Número de respuestas</string>
    <string name="vote_typeofanswer_textview">Tipo de respuestas</string>
    <string name="vote_openanswer">Respuesta 1</string>
    <string name="vote_edit_question">Introduce el tema a votar</string>
    <string name="vote_text_button_yes">Opción A / Sí</string>
    <string name="vote_text_button_no">Opción B / NO</string>
    <string name="vote_text_button_C">Opción C</string>
    <string name="vote_text_button_D">Opción D</string>
    <string name="vote_text_button_result">Calcular resultado</string>
    <string name="vote_text_edit_number_voters">Número de participantes</string>
    <string name="vote_button_text_share">Compartir el resultado</string>
    <string name="vote_desctiption_votation_button">Pulsa el botón</string>
    <string name="vote_text_view_push">Acceder a la votación</string>
    <string name="vote_config_textview">Configura la votación</string>
    <string name="vote_config_title_activity_votation">ConfigVotationActivity</string>
    <string name="vote_text_votes">Votaciones</string>
    <string name="vote_button_share">Compartir el resultado</string>

</resources>
